Made list mutable